// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirm renders correctly 1`] = `
<ConfirmBranch
  description="Desc"
  onClose={[Function]}
  onConfirm={[Function]}
  title="Title"
/>
`;

exports[`Confirm renders correctly without close button 1`] = `
<ConfirmBranch
  description="Desc"
  hasCloseButton={false}
  onClose={[Function]}
  onConfirm={[Function]}
  title="Title"
/>
`;
